[gd_scene load_steps=27 format=2]

[ext_resource path="res://Hud/LifeBarMiniProgress.png" type="Texture" id=1]
[ext_resource path="res://Hud/LifeBarMiniUnder.png" type="Texture" id=2]
[ext_resource path="res://World/Actor/Monster/Bamboo.png" type="Texture" id=3]
[ext_resource path="res://World/Actor/Sprite/Shadow.png" type="Texture" id=4]
[ext_resource path="res://World/Actor/Monster/Monster.gd" type="Script" id=5]
[ext_resource path="res://World/Actor/Monster/SndDeath.wav" type="AudioStream" id=6]
[ext_resource path="res://World/Actor/MoveBehavior/RandomMoveBehavior.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 5, 3 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 6, 10 )

[node name="Monster" type="KinematicBody2D" groups=[
"Monster",
]]
collision_layer = 16
script = ExtResource( 5 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Shadow" type="Sprite" parent="Pivot"]
texture = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 0, -7 )
frames = SubResource( 17 )
animation = "Down"
frame = 1
playing = true

[node name="LifeBar" type="TextureProgress" parent="Pivot"]
margin_left = -9.0
margin_top = -23.0
margin_right = 9.0
margin_bottom = -19.0
max_value = 6.0
value = 6.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="AreaHitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="AreaHitBox"]
position = Vector2( 0, -5 )
shape = SubResource( 19 )

[node name="Tween" type="Tween" parent="."]

[node name="SndHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="RandomMoveBehavior" parent="." instance=ExtResource( 7 )]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -5 )

[connection signal="revive" from="." to="RandomMoveBehavior" method="reset"]
[connection signal="body_entered" from="AreaHitBox" to="." method="_on_AreaHitBox_body_entered"]
[connection signal="axis_changed" from="RandomMoveBehavior" to="." method="_on_axis_changed"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="RandomMoveBehavior" method="set_disabled" binds= [ false ]]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="RandomMoveBehavior" method="set_disabled" binds= [ true ]]
